<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_collection" />

    <EditText
        android:id="@+id/collectionTitle_ed"
        android:layout_below="@id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_title"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/collectionContent_ed"
        android:layout_below="@id/collectionTitle_ed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/add_content"
        android:inputType="textMultiLine" />

    <Button
        android:layout_below="@id/collectionContent_ed"
        android:id="@+id/collectionSave"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save" />
</RelativeLayout>